--- a/VandyMobile/AppsDetailViewController.xib
+++ b/VandyMobile/AppsDetailViewController.xib
@@ -16,7 +16,6 @@
 			<string>IBUIImageView</string>
 			<string>IBUILabel</string>
 			<string>IBUIScrollView</string>
-			<string>IBUITextView</string>
 			<string>IBUIView</string>
 		</array>
 		<array key="IBDocument.PluginDependencies">
@@ -89,41 +88,6 @@
 								</object>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 							</object>
-							<object class="IBUITextView" id="342051862">
-								<reference key="NSNextResponder" ref="238490055"/>
-								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{20, 134}, {280, 140}}</string>
-								<reference key="NSSuperview" ref="238490055"/>
-								<reference key="NSWindow"/>
-								<reference key="NSNextKeyView" ref="766951522"/>
-								<string key="NSReuseIdentifierKey">_NS:9</string>
-								<object class="NSColor" key="IBUIBackgroundColor">
-									<int key="NSColorSpace">1</int>
-									<bytes key="NSRGB">MSAxIDEgMC4zNAA</bytes>
-								</object>
-								<bool key="IBUIClipsSubviews">YES</bool>
-								<bool key="IBUIMultipleTouchEnabled">YES</bool>
-								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
-								<bool key="IBUIEditable">NO</bool>
-								<object class="IBUITextInputTraits" key="IBUITextInputTraits">
-									<int key="IBUIAutocapitalizationType">2</int>
-									<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
-								</object>
-								<string key="IBUIText">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
-								<object class="NSColor" key="IBUITextColor">
-									<int key="NSColorSpace">3</int>
-									<bytes key="NSWhite">MC4zMzMzMzMzMzMzAA</bytes>
-								</object>
-								<object class="IBUIFontDescription" key="IBUIFontDescription">
-									<int key="type">1</int>
-									<double key="pointSize">14</double>
-								</object>
-								<object class="NSFont" key="IBUIFont">
-									<string key="NSName">Helvetica</string>
-									<double key="NSSize">14</double>
-									<int key="NSfFlags">16</int>
-								</object>
-							</object>
 							<object class="IBUIView" id="766951522">
 								<reference key="NSNextResponder" ref="238490055"/>
 								<int key="NSvFlags">292</int>
@@ -131,7 +95,7 @@
 									<object class="IBUIButton" id="883750040">
 										<reference key="NSNextResponder" ref="766951522"/>
 										<int key="NSvFlags">292</int>
-										<string key="NSFrame">{{144, 16}, {131, 46}}</string>
+										<string key="NSFrame">{{149, 16}, {131, 46}}</string>
 										<reference key="NSSuperview" ref="766951522"/>
 										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView"/>
@@ -170,7 +134,7 @@
 									<object class="IBUIButton" id="1006531403">
 										<reference key="NSNextResponder" ref="766951522"/>
 										<int key="NSvFlags">292</int>
-										<string key="NSFrame">{{5, 16}, {131, 46}}</string>
+										<string key="NSFrame">{{0, 16}, {131, 46}}</string>
 										<reference key="NSSuperview" ref="766951522"/>
 										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="577629523"/>
@@ -195,7 +159,7 @@
 									<object class="IBUIImageView" id="577629523">
 										<reference key="NSNextResponder" ref="766951522"/>
 										<int key="NSvFlags">292</int>
-										<string key="NSFrame">{{13, 24}, {30, 30}}</string>
+										<string key="NSFrame">{{8, 24}, {30, 30}}</string>
 										<reference key="NSSuperview" ref="766951522"/>
 										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="403653958"/>
@@ -207,7 +171,7 @@
 									<object class="IBUILabel" id="403653958">
 										<reference key="NSNextResponder" ref="766951522"/>
 										<int key="NSvFlags">292</int>
-										<string key="NSFrame">{{49, 27}, {75, 23}}</string>
+										<string key="NSFrame">{{46, 27}, {75, 23}}</string>
 										<reference key="NSSuperview" ref="766951522"/>
 										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="883750040"/>
@@ -230,7 +194,7 @@
 										<int key="IBUIAutoshrinkMode">0</int>
 									</object>
 								</array>
-								<string key="NSFrame">{{20, 281}, {280, 86}}</string>
+								<string key="NSFrame">{{20, 263}, {280, 86}}</string>
 								<reference key="NSSuperview" ref="238490055"/>
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="1006531403"/>
@@ -245,7 +209,7 @@
 									<object class="IBUILabel" id="419925950">
 										<reference key="NSNextResponder" ref="635240342"/>
 										<int key="NSvFlags">292</int>
-										<string key="NSFrame">{{-9, 0}, {157, 22}}</string>
+										<string key="NSFrameSize">{148, 22}</string>
 										<reference key="NSSuperview" ref="635240342"/>
 										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="709355122"/>
@@ -270,11 +234,11 @@
 										<int key="IBUITextAlignment">2</int>
 										<object class="IBUIFontDescription" key="IBUIFontDescription">
 											<int key="type">2</int>
-											<double key="pointSize">13</double>
+											<double key="pointSize">14</double>
 										</object>
 										<object class="NSFont" key="IBUIFont">
 											<string key="NSName">Helvetica-Bold</string>
-											<double key="NSSize">13</double>
+											<double key="NSSize">14</double>
 											<int key="NSfFlags">16</int>
 										</object>
 										<bool key="IBUIAdjustsFontSizeToFit">NO</bool>
@@ -286,7 +250,7 @@
 										<string key="NSFrame">{{0, 56}, {148, 34}}</string>
 										<reference key="NSSuperview" ref="635240342"/>
 										<reference key="NSWindow"/>
-										<reference key="NSNextKeyView" ref="342051862"/>
+										<reference key="NSNextKeyView" ref="903147058"/>
 										<string key="NSReuseIdentifierKey">_NS:9</string>
 										<bool key="IBUIOpaque">NO</bool>
 										<bool key="IBUIClipsSubviews">YES</bool>
@@ -321,7 +285,7 @@
 									<object class="IBUILabel" id="709355122">
 										<reference key="NSNextResponder" ref="635240342"/>
 										<int key="NSvFlags">292</int>
-										<string key="NSFrame">{{-9, 25}, {157, 23}}</string>
+										<string key="NSFrame">{{0, 27}, {148, 23}}</string>
 										<reference key="NSSuperview" ref="635240342"/>
 										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="551930444"/>
@@ -340,11 +304,11 @@
 										<int key="IBUITextAlignment">2</int>
 										<object class="IBUIFontDescription" key="IBUIFontDescription">
 											<int key="type">2</int>
-											<double key="pointSize">18</double>
+											<double key="pointSize">20</double>
 										</object>
 										<object class="NSFont" key="IBUIFont">
 											<string key="NSName">Helvetica-Bold</string>
-											<double key="NSSize">18</double>
+											<double key="NSSize">20</double>
 											<int key="NSfFlags">16</int>
 										</object>
 										<bool key="IBUIAdjustsFontSizeToFit">NO</bool>
@@ -359,6 +323,57 @@
 								<reference key="IBUIBackgroundColor" ref="258418437"/>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 							</object>
+							<object class="IBUIView" id="903147058">
+								<reference key="NSNextResponder" ref="238490055"/>
+								<int key="NSvFlags">292</int>
+								<array class="NSMutableArray" key="NSSubviews">
+									<object class="IBUILabel" id="868521929">
+										<reference key="NSNextResponder" ref="903147058"/>
+										<int key="NSvFlags">292</int>
+										<string key="NSFrame">{{10, 8}, {260, 113}}</string>
+										<reference key="NSSuperview" ref="903147058"/>
+										<reference key="NSWindow"/>
+										<reference key="NSNextKeyView" ref="766951522"/>
+										<string key="NSReuseIdentifierKey">_NS:9</string>
+										<bool key="IBUIOpaque">NO</bool>
+										<bool key="IBUIClipsSubviews">YES</bool>
+										<int key="IBUIContentMode">7</int>
+										<bool key="IBUIUserInteractionEnabled">NO</bool>
+										<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
+										<nil key="IBUIHighlightedColor"/>
+										<int key="IBUIBaselineAdjustment">0</int>
+										<int key="IBUINumberOfLines">0</int>
+										<int key="IBUILineBreakMode">0</int>
+										<string key="IBUIText">Label label label label label label label label label label label label label label label label label label label label label label label label label label label label label label label label label label label label label label label label label label label label label label label label label label label label label label label label label.</string>
+										<object class="NSColor" key="IBUITextColor">
+											<int key="NSColorSpace">3</int>
+											<bytes key="NSWhite">MC4zMzMzMzMzMzMzAA</bytes>
+										</object>
+										<object class="IBUIFontDescription" key="IBUIFontDescription">
+											<int key="type">1</int>
+											<double key="pointSize">14</double>
+										</object>
+										<object class="NSFont" key="IBUIFont">
+											<string key="NSName">Helvetica</string>
+											<double key="NSSize">14</double>
+											<int key="NSfFlags">16</int>
+										</object>
+										<bool key="IBUIAdjustsFontSizeToFit">NO</bool>
+										<int key="IBUIAutoshrinkMode">0</int>
+										<double key="preferredMaxLayoutWidth">260</double>
+									</object>
+								</array>
+								<string key="NSFrame">{{20, 126}, {280, 129}}</string>
+								<reference key="NSSuperview" ref="238490055"/>
+								<reference key="NSWindow"/>
+								<reference key="NSNextKeyView" ref="868521929"/>
+								<string key="NSReuseIdentifierKey">_NS:9</string>
+								<object class="NSColor" key="IBUIBackgroundColor">
+									<int key="NSColorSpace">1</int>
+									<bytes key="NSRGB">MC42MjEyMTMzMjkxIDAuNjIxMjEzMzI5MSAwLjYyMTIxMzMyOTEgMC42MQA</bytes>
+								</object>
+								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
+							</object>
 						</array>
 						<string key="NSFrameSize">{320, 367}</string>
 						<reference key="NSSuperview" ref="191373211"/>
@@ -368,6 +383,7 @@
 						<bool key="IBUIClipsSubviews">YES</bool>
 						<bool key="IBUIMultipleTouchEnabled">YES</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
+						<bool key="IBUIShowsHorizontalScrollIndicator">NO</bool>
 					</object>
 				</array>
 				<string key="NSFrame">{{0, 64}, {320, 367}}</string>
@@ -406,14 +422,6 @@
 						<reference key="destination" ref="82637965"/>
 					</object>
 					<int key="connectionID">5</int>
-				</object>
-				<object class="IBConnectionRecord">
-					<object class="IBCocoaTouchOutletConnection" key="connection">
-						<string key="label">descriptionTextView</string>
-						<reference key="source" ref="372490531"/>
-						<reference key="destination" ref="342051862"/>
-					</object>
-					<int key="connectionID">21</int>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchOutletConnection" key="connection">
@@ -496,6 +504,38 @@
 					<int key="connectionID">52</int>
 				</object>
 				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">descriptionTextView</string>
+						<reference key="source" ref="372490531"/>
+						<reference key="destination" ref="868521929"/>
+					</object>
+					<int key="connectionID">54</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">scrollView</string>
+						<reference key="source" ref="372490531"/>
+						<reference key="destination" ref="238490055"/>
+					</object>
+					<int key="connectionID">56</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">descriptionContainerView</string>
+						<reference key="source" ref="372490531"/>
+						<reference key="destination" ref="903147058"/>
+					</object>
+					<int key="connectionID">57</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">delegate</string>
+						<reference key="source" ref="238490055"/>
+						<reference key="destination" ref="372490531"/>
+					</object>
+					<int key="connectionID">58</int>
+				</object>
+				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchEventConnection" key="connection">
 						<string key="label">devTeamButtonPressed</string>
 						<reference key="source" ref="1006531403"/>
@@ -546,10 +586,10 @@
 						<int key="objectID">17</int>
 						<reference key="object" ref="238490055"/>
 						<array class="NSMutableArray" key="children">
-							<reference ref="766951522"/>
 							<reference ref="933682644"/>
 							<reference ref="635240342"/>
-							<reference ref="342051862"/>
+							<reference ref="766951522"/>
+							<reference ref="903147058"/>
 						</array>
 						<reference key="parent" ref="191373211"/>
 					</object>
@@ -557,11 +597,6 @@
 						<int key="objectID">4</int>
 						<reference key="object" ref="82637965"/>
 						<reference key="parent" ref="191373211"/>
-					</object>
-					<object class="IBObjectRecord">
-						<int key="objectID">12</int>
-						<reference key="object" ref="342051862"/>
-						<reference key="parent" ref="238490055"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">40</int>
@@ -573,6 +608,7 @@
 							<reference ref="883750040"/>
 						</array>
 						<reference key="parent" ref="238490055"/>
+						<string key="objectName">Button Container View</string>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">27</int>
@@ -596,6 +632,7 @@
 							<reference ref="68357363"/>
 						</array>
 						<reference key="parent" ref="238490055"/>
+						<string key="objectName">Image Container View</string>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">6</int>
@@ -611,11 +648,12 @@
 						<int key="objectID">51</int>
 						<reference key="object" ref="635240342"/>
 						<array class="NSMutableArray" key="children">
-							<reference ref="709355122"/>
 							<reference ref="419925950"/>
 							<reference ref="551930444"/>
+							<reference ref="709355122"/>
 						</array>
 						<reference key="parent" ref="238490055"/>
+						<string key="objectName">Header Container View</string>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">7</int>
@@ -632,6 +670,20 @@
 						<reference key="object" ref="551930444"/>
 						<reference key="parent" ref="635240342"/>
 					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">55</int>
+						<reference key="object" ref="903147058"/>
+						<array class="NSMutableArray" key="children">
+							<reference ref="868521929"/>
+						</array>
+						<reference key="parent" ref="238490055"/>
+						<string key="objectName">Description Container View</string>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">53</int>
+						<reference key="object" ref="868521929"/>
+						<reference key="parent" ref="903147058"/>
+					</object>
 				</array>
 			</object>
 			<dictionary class="NSMutableDictionary" key="flattenedProperties">
@@ -641,7 +693,6 @@
 				<string key="-2.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="1.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="10.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-				<string key="12.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="17.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="26.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="27.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
@@ -652,6 +703,8 @@
 				<string key="45.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="48.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="51.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<string key="53.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<string key="55.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="6.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="7.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="8.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
@@ -660,7 +713,7 @@
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">52</int>
+			<int key="maxID">58</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -673,10 +726,12 @@
 						<string key="appStoreButton">UIButton</string>
 						<string key="backgroundView">UIImageView</string>
 						<string key="belowTextViewContainerView">UIView</string>
-						<string key="descriptionTextView">UITextView</string>
+						<string key="descriptionContainerView">UIView</string>
+						<string key="descriptionTextView">UILabel</string>
 						<string key="envelopeImageView">UIImageView</string>
 						<string key="labelsContainerView">UIView</string>
 						<string key="nameLabel">UILabel</string>
+						<string key="scrollView">UIScrollView</string>
 						<string key="taglineLabel">UILabel</string>
 						<string key="teamButton">UIButton</string>
 						<string key="teamLabel">UILabel</string>
@@ -702,9 +757,13 @@
 							<string key="name">belowTextViewContainerView</string>
 							<string key="candidateClassName">UIView</string>
 						</object>
+						<object class="IBToOneOutletInfo" key="descriptionContainerView">
+							<string key="name">descriptionContainerView</string>
+							<string key="candidateClassName">UIView</string>
+						</object>
 						<object class="IBToOneOutletInfo" key="descriptionTextView">
 							<string key="name">descriptionTextView</string>
-							<string key="candidateClassName">UITextView</string>
+							<string key="candidateClassName">UILabel</string>
 						</object>
 						<object class="IBToOneOutletInfo" key="envelopeImageView">
 							<string key="name">envelopeImageView</string>
@@ -717,6 +776,10 @@
 						<object class="IBToOneOutletInfo" key="nameLabel">
 							<string key="name">nameLabel</string>
 							<string key="candidateClassName">UILabel</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="scrollView">
+							<string key="name">scrollView</string>
+							<string key="candidateClassName">UIScrollView</string>
 						</object>
 						<object class="IBToOneOutletInfo" key="taglineLabel">
 							<string key="name">taglineLabel</string>
