--- a/VandyMobile/LoginStageTwoViewController.xib
+++ b/VandyMobile/LoginStageTwoViewController.xib
@@ -95,9 +95,10 @@
 					<object class="IBUIButton" id="568695653">
 						<reference key="NSNextResponder" ref="191373211"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{32, 311}, {252, 44}}</string>
+						<string key="NSFrame">{{32, 304}, {252, 44}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<reference key="NSWindow"/>
+						<reference key="NSNextKeyView"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -204,7 +205,7 @@
 					<object class="IBUITextField" id="562430596">
 						<reference key="NSNextResponder" ref="191373211"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{113, 91}, {187, 22}}</string>
+						<string key="NSFrame">{{113, 90}, {187, 22}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="586313909"/>
@@ -216,24 +217,25 @@
 						<string key="IBUIPlaceholder">first.m.last@vanderbilt.edu</string>
 						<bool key="IBUIClearsOnBeginEditing">YES</bool>
 						<bool key="IBUIAdjustsFontSizeToFit">YES</bool>
-						<float key="IBUIMinimumFontSize">12</float>
+						<float key="IBUIMinimumFontSize">10</float>
 						<object class="IBUITextInputTraits" key="IBUITextInputTraits">
 							<int key="IBUIAutocorrectionType">1</int>
 							<int key="IBUIReturnKeyType">9</int>
 							<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 						</object>
+						<int key="IBUIClearButtonMode">1</int>
 						<string key="IBUIText"/>
 						<object class="NSColor" key="IBUITextColor" id="144299444">
 							<int key="NSColorSpace">3</int>
 							<bytes key="NSWhite">MC4zMzMzMzMzMzMzAA</bytes>
 						</object>
-						<object class="IBUIFontDescription" key="IBUIFontDescription">
+						<object class="IBUIFontDescription" key="IBUIFontDescription" id="293832990">
 							<int key="type">1</int>
-							<double key="pointSize">15</double>
+							<double key="pointSize">16</double>
 						</object>
-						<object class="NSFont" key="IBUIFont">
+						<object class="NSFont" key="IBUIFont" id="470432593">
 							<string key="NSName">Helvetica</string>
-							<double key="NSSize">15</double>
+							<double key="NSSize">16</double>
 							<int key="NSfFlags">16</int>
 						</object>
 					</object>
@@ -249,27 +251,21 @@
 						<bool key="IBUIClipsSubviews">YES</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 						<int key="IBUIContentVerticalAlignment">0</int>
-						<string key="IBUIPlaceholder">bestpasswordever</string>
+						<string key="IBUIPlaceholder">bestpasswordever123!</string>
 						<bool key="IBUIClearsOnBeginEditing">YES</bool>
 						<bool key="IBUIAdjustsFontSizeToFit">YES</bool>
-						<float key="IBUIMinimumFontSize">17</float>
+						<float key="IBUIMinimumFontSize">10</float>
 						<object class="IBUITextInputTraits" key="IBUITextInputTraits">
 							<int key="IBUIAutocorrectionType">1</int>
 							<int key="IBUIReturnKeyType">9</int>
 							<bool key="IBUISecureTextEntry">YES</bool>
 							<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 						</object>
+						<int key="IBUIClearButtonMode">1</int>
 						<string key="IBUIText"/>
 						<reference key="IBUITextColor" ref="144299444"/>
-						<object class="IBUIFontDescription" key="IBUIFontDescription">
-							<int key="type">1</int>
-							<double key="pointSize">16</double>
-						</object>
-						<object class="NSFont" key="IBUIFont">
-							<string key="NSName">Helvetica</string>
-							<double key="NSSize">16</double>
-							<int key="NSfFlags">16</int>
-						</object>
+						<reference key="IBUIFontDescription" ref="293832990"/>
+						<reference key="IBUIFont" ref="470432593"/>
 					</object>
 					<object class="IBUIButton" id="716931742">
 						<reference key="NSNextResponder" ref="191373211"/>
@@ -476,12 +472,12 @@
 							<reference ref="716931742"/>
 							<reference ref="1045274121"/>
 							<reference ref="303449312"/>
-							<reference ref="568695653"/>
 							<reference ref="1002162104"/>
 							<reference ref="586313909"/>
 							<reference ref="856547779"/>
 							<reference ref="573613127"/>
 							<reference ref="562430596"/>
+							<reference ref="568695653"/>
 						</array>
 						<reference key="parent" ref="0"/>
 					</object>
